test-data/unit/fine-grained-attr.test
[case updateMagicField]
from attr import Attribute
import m

def g() -> Attribute[int]:
    return m.A.__attrs_attrs__[0]

[file m.py]
from attr import define

@define
class A:
    a: int
[file m.py.2]
from attr import define

@define
class A:
    a: float
[builtins fixtures/attr.pyi]
[out]
==
main:5: error: Incompatible return value type (got "Attribute[float]", expected "Attribute[int]")

[case magicAttributeConsistency]
import m

[file c.py]
from attr import define

@define
class A:
    a: float
    b: int
[builtins fixtures/attr.pyi]

[file m.py]
from c import A

A.__attrs_attrs__.a

[file m.py.2]
from c import A

A.__attrs_attrs__.b

[out]
==

[case magicAttributeConsistency2]
import m

[file c.py]
import attr

@attr.s
class Entry:
    var: int
[builtins fixtures/attr.pyi]

[file m.py]
import attr
from c import Entry

def func(e: Entry) -> None:
    attr.asdict(e)

[file m.py.2]
import attr
from c import Entry

def func(e: Entry) -> int:
    attr.asdict(e)
    return 2

[out]
==
